[package]
name = "nyt_cli"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/DaBlower/nyt_cli"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15.7"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


[package.metadata.dist]
include = [".env.example"]