[package]
name = "nyt_cli"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/DaBlower/resolution"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15.7"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
